# geomlib

./: LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
geomlib/: __init__.py  circle.py  cone.py  cube.py  cuboid.py  cylinder.py  ellipse.py  line.py  parallelogram.py  point.py  point3d.py  rectangle.py  rhombus.py  sphere.py  square.py  triangle.py
geomlib_advanced.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_geometry.py
